# hass-qwikswitch-api

./: .devcontainer.json  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  mcp.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: clean  develop  lint  setup
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: lint.yml  validate.yml
custom_components/hass_qwikswitchapi/: __init__.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  light.py  manifest.json  switch.py
custom_components/qwikswitch_api/: __init__.py  api.py  binary_sensor.py  command_queue.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  light.py  manifest.json  sensor.py  switch.py
custom_components/qwikswitch_api/translations/: en.json
scripts/: clean  develop
tests/: conftest.py  test_command_queue.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_init.py  test_light.py  test_switch.py
