# Project manifest and single source of truth for dependencies.
#
# Dependency layout:
#   [project.dependencies]  -> the component's RUNTIME deps, mirrored from
#                              custom_components/qwikswitch_api/manifest.json.
#                              pip-audit scans ONLY this tree (uv export --no-dev).
#   [dependency-groups.dev] -> Home Assistant + dev/test/lint tooling. Not shipped
#                              to users and deliberately excluded from vuln scanning
#                              (large transitive tree we don't govern).
#
# uv.lock is the lockfile; regenerate with `uv lock` and sync with `uv sync`.

[project]
name = "hass-qwikswitch-api"
version = "0.0.11"
description = "Home Assistant custom component integrating QwikSwitch devices via the QwikSwitch cloud API."
readme = "README.md"
requires-python = ">=3.14.2"
license = { text = "MIT" }
authors = [{ name = "Riaan Hanekom", email = "riaanh@ozow.com" }]

# Runtime dependencies — keep in sync with manifest.json "requirements".
dependencies = [
    "qwikswitch-api==0.0.12",
]

[dependency-groups]
# Development, test and tooling dependencies (not shipped to users).
dev = [
    "homeassistant>=2026.3.0",
    "pytest-homeassistant-custom-component>=0.13.203",
    "ruff==0.15.21",
    "mypy==2.3.0",
    "pre-commit==4.6.0",
]

[tool.uv]
# This is a Home Assistant custom component, not a distributable package —
# uv manages the environment and lockfile but does not build/install this repo.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# The pytest-homeassistant-custom-component fixtures (e.g. `hass`) are async;
# "auto" mode lets test/fixture coroutines run without per-item markers.
asyncio_mode = "auto"
addopts = "--cov=custom_components/qwikswitch_api --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["custom_components/qwikswitch_api"]

[tool.coverage.report]
# TYPE_CHECKING-only imports never execute at runtime.
exclude_also = ["if TYPE_CHECKING:"]
